# SteamNews

./: .gitignore  README.md  SupportedAPIList.json  app.py  config.json  pyproject.toml  requirements.txt  steamnews.py  utils.py
docs/: SteamAPITerms.md
