[project]
name = "steamnews"
version = "1.5.7"
description = "Python script to notify of Steam game news updates via Discord"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "datetime>=5.5",
    "idna>=3.10",
    "logging>=0.4.9.6",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "setuptools>=79.0.0",
    "urllib3>=2.4.0",
    "zope-interface>=7.2",
]
